[gd_scene load_steps=3 format=3 uid="uid://dprog65i2n2ke"]

[ext_resource type="Script" uid="uid://kxkvu73cjod6" path="res://scripts/start_menu.gd" id="1_ouf4f"]

[sub_resource type="LabelSettings" id="LabelSettings_jwbto"]
font_size = 64

[node name="StartMenu" type="Control" node_paths=PackedStringArray("player_1_option_button", "player_2_option_button", "quit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 286.0
offset_top = 162.0
offset_right = -286.0
offset_bottom = -162.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouf4f")
player_1_option_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Player1OptionButton")
player_2_option_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Player2OptionButton")
quit_button = NodePath("MarginContainer/VBoxContainer/VBoxContainer/QuitButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -139.0
offset_right = 259.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Player1" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="Player1OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Pong"
label_settings = SubResource("LabelSettings_jwbto")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Player2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1

[node name="Player2OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game
"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit
"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Player1OptionButton" to="." method="_on_player_1_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Player2OptionButton" to="." method="_on_player_2_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
